--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -1,3 +1,4 @@
+@import 'mixins.less';
 
 /*********************************
 4. Home
@@ -17,7 +18,7 @@
 #home_container
 {
 	.w100();
-	height: 600px;
+	height: 100vh;
 	background-image:url("../../images/home_background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -192,8 +193,11 @@
 
 #collections
 {
-	.flex(@jus: space-around);
-	margin-bottom: 10px;
+	// .flex(@dir: column, @jus: space-around);
+	display: flex;
+	flex-wrap: wrap;
+	height: 100vh;
+	width: 100%;
 
 	@media only screen and (max-width: 767px)
 	{
@@ -201,37 +205,34 @@
 	}
 
 }
-.collections_item
-{
-	.w(31%);
-	.flex(@dir: column, @wrap: nowrap);
+// .collections_item
+// {
+// 	.w(100%);
+// 	height: 450px;
 
-	@media only screen and (max-width: 959px)
-	{
-		width: 100%;
-	}
+// 	@media only screen and (max-width: 400px)
+// 	{
+// 		padding: 5% 0;
+// 	}
+// }
+
+
+#collections_right {
+	display: flex;
+	flex-direction: column;
+	width: 49%;
 }
-.collections_item .collections_button
-{
-	.w100();
-	margin: 0 auto;
 
-	@media only screen and (max-width: 400px)
-	{
-		padding: 5% 0;
-	}
-
-}
 .collections_image
 {
-	.w100();
-	height: 450px;
+	// .w100();
+	// height: 450px;
 	.imgbgcent();
 
-	@media only screen and (max-width: 1380px)
-	{
-		height: 400px;
-	}
+	// @media only screen and (max-width: 1380px)
+	// {
+	// 	height: 400px;
+	// }
 
 	@media only screen and (max-width: 959px)
 	{
@@ -256,6 +257,7 @@
 }
 #collections_image_1
 {
+	width: 50%;
 	background-image: url("../../images/promo_1.jpg");
 
 	@media only screen and (max-width: 959px)
@@ -263,13 +265,11 @@
 		background-image: url("../../images/promo_1_small.jpg");
 	}
 }
-#collections_item_2
-{
-	margin: 0 2.5%;
-}
+
 #collections_image_2
 {
 	background-image: url("../../images/promo_2.jpg");
+	height: 50%;
 
 	@media only screen and (max-width: 959px)
 	{
@@ -284,6 +284,8 @@
 #collections_image_3
 {
 	background-image: url("../../images/promo_3.jpg");
+	height: 50%;
+
 
 	@media only screen and (max-width: 959px)
 	{
@@ -298,7 +300,7 @@
 #arrivals
 {
 	.flex(@jus: space-around);
-	margin-top: 5%;
+	height: 100vh;
 
 	@media only screen and (max-width: 400px)
 	{
@@ -884,5 +886,19 @@
 	@media only screen and (max-width: 400px)
 	{
 		font-size: .9rem;
+	}
+}
+
+#instafeed {
+	margin: 0 auto;
+	width: 90%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+
+	img {
+		width: 300px;
+		height: 300px; 
 	}
 }
