--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -51,3 +51,8 @@ h1, h2, h3, h4, h5, h6
 	font-family: 'Open Sans', sans-serif;
 	.txtShadow();
 }
+
+#margin {
+	// width: 85%;
+	// margin: 0 auto;
+}
