--- a/styles/less/objects.less
+++ b/styles/less/objects.less
@@ -1,11 +1,15 @@
 //Objects//
+@import 'mixins.less';
 
 .section_title
 {
   font-family: 'Lucida', serif;
   font-weight: lighter;
   text-transform: uppercase;
-  font-size: 3.5rem;
+  font-size: 3rem;
+  padding: 10% 0 10% 0;
+  height: 100px;
+  line-height: 100px;
 	color: #2f2f2f;
 	width: 100%;
   .txtAlCent();
