--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -5,7 +5,12 @@
 @import "global.less";
 @import "navigation.less";
 @import "burger.less";
-@import "home.less";
+@import "landing_banner.less";
+@import "collections.less";
+@import "featured.less";
+@import "offers.less";
+@import "testimonials.less";
+@import "instafeed.less";
 @import "about.less";
 @import "contact.less";
 @import "footer.less";
