added animation to product images, removed one offer from offers section, styled instafeed div in preparation for javascript carousel logic

--- a/styles/less/global/footer.less
+++ b/styles/less/global/footer.less
@@ -2,7 +2,7 @@
 footer
 {
 	height: 100vh;
-	.flex(@dir: column, @wrap: nowrap, @al: center);
+	.flex(@dir: column, @wrap: nowrap, @al: center, @jus: space-around,);
 }
 
 
