--- a/styles/less/global/navigation.less
+++ b/styles/less/global/navigation.less
@@ -60,7 +60,7 @@
 #nav_logo_img
 {
 	background-image: url("../../images/logo.png");
-	.test(red);
+	// .test(red);
 	margin-left: 5%;
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -121,7 +121,7 @@
 .main_nav ul li a
 {
 	font-size: 1rem;
-	text-transform: uppercase;
+	font-family: 'Montserrat', sans-serif;
 	color: black;
 	font-weight: bold;
 	letter-spacing: 0.2em;
