--- a/styles/less/home_page/collections.less
+++ b/styles/less/home_page/collections.less
@@ -1,9 +1,8 @@
-/*********************************
- Collections
-*********************************/
+@import "../tools/mixins.less";
 
 .overlay {
 	display: flex;
+
 	justify-content: center;
 	align-items: center;
 	background-color: black;
@@ -14,6 +13,7 @@
 	p {
 		font-size: 2rem;
 		color: white;
+		font-family: 'Montserrat', sans-serif;
 	}
 	
 }
