--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -1,17 +1,18 @@
-@import "variables.less";
-@import "mixins.less";
-@import "fonts.less";
-@import "objects.less";
-@import "global.less";
-@import "navigation.less";
-@import "burger.less";
-@import "landing_banner.less";
-@import "collections.less";
-@import "featured.less";
-@import "offers.less";
-@import "testimonials.less";
-@import "instafeed.less";
+@import "./tools/variables.less";
+@import "./tools/mixins.less";
+@import "./tools/fonts.less";
+@import "./tools/objects.less";
+@import "./global/global.less";
+@import "./global/navigation.less";
+@import "./global/burger.less";
+@import "./global/footer.less";
+@import "./global/newsletter.less";
+@import "./home_page/landing_banner.less";
+@import "./home_page/collections.less";
+@import "./home_page/featured.less";
+@import "./home_page/offers.less";
+@import "./home_page/testimonials.less";
+@import "./home_page/instafeed.less";
 @import "about.less";
 @import "contact.less";
-@import "footer.less";
 @import "thank_you.less";
