--- a/styles/less/home_page/testimonials.less
+++ b/styles/less/home_page/testimonials.less
@@ -1,6 +1,4 @@
-/*********************************
-10. Testimonials
-*********************************/
+@import "../tools/mixins.less";
 
 #testimonials
 {
@@ -19,7 +17,7 @@
 	margin: 0 auto;
 	font-family: 'Lucida', serif;
 	font-weight: lighter;
-	font-size: 1.5rem;
+	font-size: 2.25rem;
 	color: #8a8a8a;
 	font-style: italic;
 	.txtAlCent();
@@ -47,7 +45,7 @@
 	font-family: 'Lucida', serif;
 	font-weight: lighter;
 	.txtAlCent();
-	font-size: 1.2rem;
+	font-size: 1.55rem;
 	font-weight: 700;
 	color: #232323;
 	margin-top: 2%;
