--- a/styles/less/global/newsletter.less
+++ b/styles/less/global/newsletter.less
@@ -1,5 +1,28 @@
 .newsletter {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    width: 50%;
+    // border: 2px solid red;
+    text-align: center;
+    margin-top: auto;
+    align-self: center;
+    // border: 2px solid red;
+    h1 {
+        width: 100%;
+        // border: 2px solid red;
+        font-size: 3.37rem;
+        margin-bottom: 2.5%;
+    }
+
+    form {
+        width: 100%;
+        display: inline-flex;
+    }
+
+    input.newsletter_input {
+        width: calc(100% - 191px);
+        height: 65px;
+        border: 1px solid black;
+        box-sizing: border-box;
+        border-right: none;
+
+    }
 }
