--- a/styles/less/tools/objects.less
+++ b/styles/less/tools/objects.less
@@ -3,14 +3,16 @@
 
 .button
 {
-	font-size: 1rem;
-	font-family: 'Open Sans';
+  font-size: 1rem;
+  border: 1px solid black;	
+  font-family: 'Open Sans';
   text-transform: uppercase;
   color: black;
 	letter-spacing: 0.2em;
-	width: 190px;
-	padding: 20px 0;
-	border: none;
+  width: 190px;
+  height: 65px;
+  line-height: 65px;
+	// border: none;
   outline: none;
   background: white;
   opacity: .60;
