--- a/styles/less/home_page/instafeed.less
+++ b/styles/less/home_page/instafeed.less
@@ -2,8 +2,27 @@
 
 
 #instaCont {
-	
+	background: black;
+	position: relative;
 }
+
+.arrow {
+	font-size: 2rem;
+	position: absolute;
+}
+
+#instarrow1 {
+	right: 5%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+#instarrow2 {
+	left: 5%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 
 #instafeed {
 	position: relative;
@@ -16,13 +35,14 @@
 
 	.instaimg {
 		position: relative;
-		// left: -50%;
+		left: 0;
 		width: 100%;
 		height: 100%; 
 		text-align: center;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		transition: left 1s;
 	}
 }
 
