--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -3,8 +3,10 @@
 @import "./tools/fonts.less";
 @import "./tools/objects.less";
 @import "./global/global.less";
+@import "./global/header.less";
 @import "./global/navigation.less";
-@import "./global/burger.less";
+@import "./global/burger_icon.less";
+@import "./global/mobile_menu.less";
 @import "./global/footer.less";
 @import "./global/newsletter.less";
 @import "./home_page/landing_banner.less";
