--- a/styles/less/global/navigation.less
+++ b/styles/less/global/navigation.less
@@ -1,70 +1,10 @@
 
-
-
-/* Header */
-
-#header
-{
-	position: fixed;
-	height: @header_height;
-	top: 0;
-	.w100();
-	background: rgba(255,255,255,.5);
-	z-index: 100;
-	display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-ms-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
-
-	@media only screen and (max-width: 991px)
-	{
-		justify-content: center;
-		background: rgba(255,255,255,0);
-
-	}
-
-	@media only screen and (max-width: 766px)
-	{
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		background: rgba(255,255,255,1);
-		height: @header_height_small;
-		flex-wrap: wrap;
-		align-items: center;
-		justify-content: center;
-	}
-}
-
-
-#header.scrolled
-{
-	// height: 120px;
-	top: -150px;
-
-	@media only screen and (max-width: 766px)
-	{
-		height: 110px;
-	}
-}
-
-
-/* Nav and Logo */
-
 #nav_logo_img
 {
 	background-image: url("../../images/logo.png");
 	// .test(red);
 	margin-left: 5%;
 	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
 	width: @logo_width;
 	height: @logo_height;
 	-webkit-transition: all 200ms ease;
@@ -73,36 +13,31 @@
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 
-	@media only screen and (max-width: 575px)
+	@media only screen  and (min-width : 1824px) {
+		width: @logo_width + 100px;
+		height: @logo_height + 100px;
+
+	}
+
+	@media only screen and (max-width: 800px)
 	{
 		width: @logo_width_small;
 		height: @logo_height_small;
-	}
-
-	@media only screen and (max-width: 766px)
-	{
-
-	}
-
-	@media only screen and (max-width: 400px)
-	{
-		width: 100%;
-		height: @logo_height_small/1.25;
-		margin-top: 5%;
+		margin-left: 2.5%;
 	}
 }
 
 .main_nav
 {
   width: 50%;
-  margin-right: 5%;
-//   padding: 0 2.5%;
-//   border: 2px solid red;
-  
+  margin-right: 5%;  
 
+	@media only screen and (max-width: 1200px)
+	{
+		width: 65%; 
+	}
 
-
-	@media only screen and (max-width: 991px)
+	@media only screen and (max-width: 700px)
 	{
 		display: none;
 	}
@@ -130,15 +65,27 @@
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+
+	@media only screen  and (min-width : 3200px) {
+		font-size: 3.5rem;
+	}
+
+	@media only screen  and (min-width : 1824px) {
+		font-size: 2rem;
+	}	
 }
 
-
-.main_nav ul li a:hover
-{
-	color: black;
-}
-
-.search_icon {
+.nav_icon {
 	width: 30px;
 	height: 30px;
+
+	@media only screen  and (min-width : 3200px) {
+		width: 55px;
+		height: 55px;
+	}
+
+	@media only screen  and (min-width : 1824px) {
+		width: 45px;
+		height: 45px;
+	}
 }
